# telegram-delete-logger

./: config.py.example  diag.py  pyproject.toml  tg_delete_logger.py
src/telegram_delete_logger/: __init__.py
