[project]
name = "telegram-delete-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cffi==1.17.1",
    "cryptg==0.5.1",
    "pyaescrypt>=6.1.1",
    "telethon>=1.40.0",
]

[project.scripts]
telegram-delete-logger = "telegram_delete_logger:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
